@@ -559,10 +559,10 @@ int json_read_object(const char *cp, const struct json_attr_t *attrs,
     char *savedlocale = setlocale(LC_ALL, NULL);
     int st;
 
-    setlocale(LC_ALL, "C");
+    (void)setlocale(LC_ALL, "C");
     json_debug_trace((1, "json_read_object() sees '%s'\n", cp));
     st = json_internal_read_object(cp, attrs, NULL, 0, end);
-    setlocale(LC_ALL, savedlocale);
+    (void)setlocale(LC_ALL, savedlocale);
     return st;
 }
 
